add environment values clickhouse_user clickhouse_password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-clickhouse.username=clickhouse_user
-clickhouse.password=password
+clickhouse.username=${CLICKHOUSE_USER:clickhouse_user}
+clickhouse.password=${CLICKHOUSE_PASSWORD:password}
 clickhouse.url=${CLICKHOUSE_JDBC:jdbc:clickhouse://localhost:8123?compress=0}
 eventeumUrl = ${EVENTEUM_ADDRESS:http://localhost:8060/}
 
@@ -12,7 +12,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=${POSTGRES_JDBC:jdbc:postgresql://host.docker.internal/analysis_platform}
 spring.sql.init.platform=postgres
 spring.datasource.username=${POSTGRES_USER:postgres_user}
-spring.datasource.password=${POSTGRES_PASS:password}
+spring.datasource.password=${POSTGRES_PASSWORD:password}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
