--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -35,9 +35,11 @@ services:
       #CLICKHOUSE_JDBC: jdbc:clickhouse://host.docker.internal:8123?compress=0
       #POSTGRES_JDBC: jdbc:postgresql://host.docker.internal/analysis_platform
       CLICKHOUSE_JDBC: jdbc:clickhouse://clickhouse:8123?compress=0
+      CLICKHOUSE_USER: clickhouse_user
+      CLICKHOUSE_PASSWORD: password
       POSTGRES_JDBC: jdbc:postgresql://postgres/analysis_platform
       POSTGRES_USER: postgres_user
-      POSTGRES_PASS: password
+      POSTGRES_PASSWORD: password
       KAFKA_ADDRESSES: kafka:19092
       EVENTEUM_ADDRESS: http://eventeum:8060/
 
