--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ kafkaAddresses =${KAFKA_ADDRESSES:kafka:19092}
 spring.kafka.consumer.group-id=app.1
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${POSTGRES_JDBC:jdbc:postgresql://host.docker.internal/analysis_platform}
+#spring.datasource.url=${POSTGRES_JDBC:jdbc:postgresql://host.docker.internal/analysis_platform}
+spring.datasource.url=${POSTGRES_JDBC:jdbc:postgresql://localhost:5432/analysis_platform}
 spring.sql.init.platform=postgres
 spring.datasource.username=${POSTGRES_USER:postgres_user}
 spring.datasource.password=${POSTGRES_PASSWORD:password}
