Requests for clickhouse have been changed. they are now executed in PreparedStatement.
Tests for clickhouse requests have been changed: TestPropertySource is now used.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+clickhouse.dbName = Analyse
 clickhouse.username=${CLICKHOUSE_USER:clickhouse_user}
 clickhouse.password=${CLICKHOUSE_PASSWORD:password}
 clickhouse.url=${CLICKHOUSE_JDBC:jdbc:clickhouse://localhost:8123?compress=0}
