--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,16 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 
+#logs
+
+#logging.level.root=WARN
+
+logging.file.name=logs/app.log
+
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=10
 
 
-
-
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level [%thread] %logger{36} - %msg%n
+#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
